Update README.md and restart_on_server script