@@ -6,14 +6,12 @@
 cd /var/lib/ocarun
 
 HELIDON_APP_NAME=$(ls *.jar | grep oci-mp)
-pid=$(ps -fe | grep ${HELIDON_APP_NAME} | grep -v grep | awk '{print $2}')
+pid=$(ps -fe | grep ${HELIDON_APP_NAME} | grep -v -e bash -e grep | awk '{print $2}')
 if [ ! -z "$pid" ]; then
   echo "Stopping ${HELIDON_APP_NAME} with pid $pid"
-  kill -9 $pid
 fi
-echo "Starting ${HELIDON_APP_NAME}"
-PATH=$(ls -d `pwd`/jdk*/)bin:$PATH
-java --enable-preview -jar ${HELIDON_APP_NAME} &> helidon-app.log &
+echo "Starting ${HELIDON_APP_NAME} from helidon-app.service"
+sudo systemctl restart helidon-app.service
 
 # Check if Helidon is ready in 60 seconds using the readiness healthcheck endpoint of the app.
 TIMEOUT_SEC=60
@@ -21,7 +19,7 @@ start_time="$(date -u +%s)"
 while true; do
 curl -s http://localhost:8080/health/ready | grep -q '"status":"UP"'
 if [ $? -eq 0 ]; then
-  echo "Helidon app is now running with pid $(ps -fe | grep ${HELIDON_APP_NAME} | grep -v grep | awk '{print $2}')!"
+  echo "Helidon app is now running with pid $(ps -fe | grep ${HELIDON_APP_NAME} | grep -e bash -e grep | awk '{print $2}')!"
   break
 fi
 current_time="$(date -u +%s)"
